# ethercat-subdevice-info

./: .gitignore  Cargo.toml
devices/: EAI32.xml  ECAT-2011_V1.1.xml  Kistler_Type5074_V1-original.xml
src/: lib.rs
